[package]
name = "cargo-credential-netrc"
version = "0.1.0"
edition = "2021"
authors = ["Nikita Rushmanov <rush3nik@gmail.com>"]
description = "Cargo credential provider that parses your .netrc file to get credentials."
repository = "https://github.com/Nikita240/cargo-credential-netrc"
homepage = "https://github.com/Nikita240/cargo-credential-netrc"
license = "MIT OR Apache-2.0"
keywords = ["cargo-credential", "credential", "netrc"]
categories = ["development-tools::cargo-plugins", "command-line-utilities", "authentication"]
readme = "README.md"

[dependencies]
cargo-credential = "0.4.6"
clap = { version = "4.5.19", features = ["derive"] }
handlebars = "6.1.0"
rust-netrc = "0.1.1"
url = "2.5.2"
